# nof1-tracker-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: agents.rs  follow.rs  profit.rs  status.rs  telegram.rs
core_service/: Cargo.toml
core_service/src/: lib.rs
core_service/src/strategy/: mod.rs
core_service/src/utils/: mod.rs
services/: Cargo.toml
services/src/: lib.rs
services/src/api_client/: mod.rs  traits.rs
services/src/binance_service/: mod.rs  traits.rs
services/src/futures_capital_manager/: mod.rs
services/src/order_history_manager/: mod.rs
services/src/position_manager/: mod.rs
services/src/profit_calculator/: mod.rs
services/src/telegram_service/: mod.rs
services/src/trade_history_service/: mod.rs
services/src/trading_executor/: mod.rs
storage/: Cargo.toml
storage/src/: lib.rs
