[package]
name = "nof1_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
core_service = { workspace = true }
services = { workspace = true }
storage = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
config = "0.13"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
