[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
core_service = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
